## Copyright 2012-2013 Mo McRoberts.
##
##  Licensed under the Apache License, Version 2.0 (the "License");
##  you may not use this file except in compliance with the License.
##  You may obtain a copy of the License at
##
##      http://www.apache.org/licenses/LICENSE-2.0
##
##  Unless required by applicable law or agreed to in writing, software
##  distributed under the License is distributed on an "AS IS" BASIS,
##  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
##  See the License for the specific language governing permissions and
##  limitations under the License.

ACLOCAL_AMFLAGS = -I m4

DIST_SUBDIRS = m4

bin_PROGRAMS = locksmith

locksmith_SOURCES = p_keytool.h \
	keytool.c args.c handlers.c \
	generate.c text.c pem.c openssh.c ssh.c pgp.c der.c \
	turtle.c rdfxml.c dnssec.c cert-ipgp.c pka.c pkcs8.c \
	sshfp.c getopt.c x509.c

